<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  android:layout_width="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:background="@color/white">
  <LinearLayout
    android:layout_width="fill_parent"
    android:id="@+id/linearLayout1"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/create_chute_name_text"
      android:id="@+id/TextViewFormNewStaticChuteName"
      android:textSize="20dp"
      android:layout_marginBottom="5dp"
      android:textColor="@color/black"></TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/EditTextChuteName"
      android:hint="@string/create_chute_name_hint"></EditText>
  </LinearLayout>
  <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_below="@+id/linearLayout1"
    android:layout_margin="12dp"
    android:orientation="vertical">
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:id="@+id/textViewWhoCanJoin"
      android:text="@string/create_chute_who_can_join"
      android:textColor="@color/black"
      android:textSize="18dp"
      android:layout_marginBottom="5dp"></TextView>
    <LinearLayout
      android:id="@+id/linearLayout4"
      android:layout_height="fill_parent"
      android:layout_width="fill_parent">
      <RadioGroup
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_weight="1">
        <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/radio0"
          android:checked="true"
          android:text="@string/create_chute_just_me"
          android:layout_weight="1"
          android:textColor="@color/black"></RadioButton>
        <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/radio1"
          android:text="@string/create_chute_friends"
          android:layout_weight="1"
          android:textColor="@color/black"></RadioButton>
        <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/radio2"
          android:text="@string/create_chute_anyone"
          android:layout_weight="1"
          android:textColor="@color/black"></RadioButton>
      </RadioGroup>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearLayout3"
    android:layout_below="@+id/linearLayout2"
    android:layout_margin="10dp">
    <CheckBox
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:text="@string/create_chute_allow_members"
      android:textColor="@color/black"
      android:id="@+id/checkBox1"
      android:layout_width="wrap_content"></CheckBox>
    <CheckBox
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:id="@+id/checkBox2"
      android:layout_width="wrap_content"
      android:textColor="@color/black"
      android:text="@string/create_chute_allow_invite"></CheckBox>
  </LinearLayout>
  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:id="@+id/relativeLayout1"
    android:layout_marginTop="20dp"
    android:layout_alignParentBottom="true">
    <LinearLayout
      android:layout_centerInParent="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/linearLayoutHolder">
      <Button
        android:id="@+id/ButtonCancel"
        android:text="@string/create_chute_button_cancel"
        android:paddingLeft="20dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"></Button>
      <Button
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:id="@+id/ButtonSave"
        android:text="@string/create_chute_button_save"
        android:paddingLeft="15dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"></Button>
    </LinearLayout>
  </RelativeLayout>
</RelativeLayout>